[gd_scene load_steps=3 format=3 uid="uid://dehqjjw5bbrkx"]

[ext_resource type="Script" path="res://scripts/levels/MainLevelScript.gd" id="1_ibtdq"]
[ext_resource type="PackedScene" uid="uid://btg03jte3v57y" path="res://levels/IntroLevel.tscn" id="2_bcjdm"]

[node name="Control" type="Control" node_paths=PackedStringArray("game_world")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibtdq")
game_world = NodePath("SubViewportContainerGame/SubViewport/IntroScene")

[node name="SubViewportContainerGame" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainerGame"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(1152, 648)
size_2d_override = Vector2i(480, 240)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="IntroScene" parent="SubViewportContainerGame/SubViewport" instance=ExtResource("2_bcjdm")]

[node name="SubViewportContainerUI" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport2" type="SubViewport" parent="SubViewportContainerUI"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
size_2d_override = Vector2i(512, 288)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="VBoxContainerUI" type="VBoxContainer" parent="SubViewportContainerUI/SubViewport2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 4.0
offset_right = 125.0
offset_bottom = 42.0
grow_horizontal = 2
